[gd_scene load_steps=18 format=3 uid="uid://dfbtknq88qtx3"]

[ext_resource type="Script" uid="uid://cwgmvtwk4vu44" path="res://addons/MFAppUI/elements/form.gd" id="1_h8p3y"]
[ext_resource type="Texture2D" uid="uid://i7ym2ux1teno" path="res://addons/MFAppUI/themes/LargerTest_Blue.png" id="2_ynv1e"]
[ext_resource type="Texture2D" uid="uid://b2bwby3r23qc8" path="res://addons/MFAppUI/themes/LargerTest_BUTTONS_A.png" id="3_pkdd1"]
[ext_resource type="Texture2D" uid="uid://dctnigrmf047s" path="res://addons/MFAppUI/themes/LargerTest__MIN.png" id="3_ynv1e"]
[ext_resource type="Texture2D" uid="uid://bt1iqmpx7sj41" path="res://addons/MFAppUI/themes/LargerTest_BUTTONS_SIZER.png" id="4_ynv1e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pkdd1"]
atlas = ExtResource("3_pkdd1")
region = Rect2(0, 0, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynv1e"]
atlas = ExtResource("3_pkdd1")
region = Rect2(0, 33, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5wyr"]
atlas = ExtResource("3_pkdd1")
region = Rect2(0, 99, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_2i68q"]
atlas = ExtResource("3_pkdd1")
region = Rect2(0, 66, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lvec"]
atlas = ExtResource("3_pkdd1")
region = Rect2(33, 0, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_eexcs"]
atlas = ExtResource("3_pkdd1")
region = Rect2(33, 33, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_5o64p"]
atlas = ExtResource("3_pkdd1")
region = Rect2(33, 99, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m51ua"]
atlas = ExtResource("3_pkdd1")
region = Rect2(33, 66, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_mo76p"]
atlas = ExtResource("3_pkdd1")
region = Rect2(66, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_plssd"]
atlas = ExtResource("3_pkdd1")
region = Rect2(66, 33, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_wa8kg"]
atlas = ExtResource("3_pkdd1")
region = Rect2(66, 99, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfyfj"]
atlas = ExtResource("3_pkdd1")
region = Rect2(66, 66, 33, 33)

[node name="Form" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 250.0
offset_bottom = 150.0
script = ExtResource("1_h8p3y")

[node name="NinePatchRectMax" type="NinePatchRect" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_ynv1e")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 10
patch_margin_top = 35
patch_margin_right = 10
patch_margin_bottom = 11
axis_stretch_horizontal = 2

[node name="NinePatchRectMin" type="NinePatchRect" parent="."]
visible = false
layout_mode = 2
anchor_right = 1.0
offset_bottom = 33.0
texture = ExtResource("3_ynv1e")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="InternalFormDropSpace" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 36.0
offset_right = -14.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2

[node name="btnMin" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -107.0
offset_right = -74.0
offset_bottom = 33.0
focus_mode = 0
texture_normal = SubResource("AtlasTexture_pkdd1")
texture_pressed = SubResource("AtlasTexture_ynv1e")
texture_hover = SubResource("AtlasTexture_c5wyr")
texture_disabled = SubResource("AtlasTexture_2i68q")
texture_focused = SubResource("AtlasTexture_pkdd1")

[node name="btnMax" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -74.0
offset_right = -41.0
offset_bottom = 33.0
focus_mode = 0
texture_normal = SubResource("AtlasTexture_1lvec")
texture_pressed = SubResource("AtlasTexture_eexcs")
texture_hover = SubResource("AtlasTexture_5o64p")
texture_disabled = SubResource("AtlasTexture_m51ua")
texture_focused = SubResource("AtlasTexture_1lvec")

[node name="btnClose" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -41.0
offset_right = -8.0
offset_bottom = 32.0
focus_mode = 0
texture_normal = SubResource("AtlasTexture_mo76p")
texture_pressed = SubResource("AtlasTexture_plssd")
texture_hover = SubResource("AtlasTexture_wa8kg")
texture_disabled = SubResource("AtlasTexture_dfyfj")
texture_focused = SubResource("AtlasTexture_mo76p")

[node name="btnResize" type="TextureButton" parent="."]
layout_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -22.0
offset_top = -22.0
focus_mode = 0
action_mode = 0
shortcut_feedback = false
shortcut_in_tooltip = false
texture_normal = ExtResource("4_ynv1e")

[node name="btnMove" type="TextureButton" parent="."]
layout_mode = 2
anchor_right = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -109.0
offset_bottom = 31.0
focus_mode = 0
action_mode = 0
shortcut_feedback = false
shortcut_in_tooltip = false

[node name="formText" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 7.0
offset_top = 5.0
offset_right = -109.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 16
text = "FORM 01 Test LOREMierhoiej"
clip_text = true
text_overrun_behavior = 1
uppercase = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="button_up" from="btnMin" to="." method="_on_btn_min_button_up"]
[connection signal="button_up" from="btnMax" to="." method="_on_btn_max_button_up"]
[connection signal="button_up" from="btnClose" to="." method="_on_btn_close_button_up"]
[connection signal="button_down" from="btnResize" to="." method="_on_btn_resize_button_down"]
[connection signal="button_up" from="btnResize" to="." method="_on_btn_resize_button_up"]
[connection signal="button_down" from="btnMove" to="." method="_on_btn_move_button_down"]
[connection signal="button_up" from="btnMove" to="." method="_on_btn_move_button_up"]
